--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   fluttertoast: ^8.2.2
   image_picker: ^0.8.9
+  cached_network_image: ^3.2.3
+  eva_icons_flutter: ^3.1.0
+  firebase_storage: ^11.2.3
+  firebase_database: ^10.2.3
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
