--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   firebase_core: ^2.14.0
   get_storage: ^2.1.1
   email_validator: ^2.1.17
+  cloud_firestore: ^4.8.2
+  platform_device_id: ^1.0.1
 
 dev_dependencies:
   flutter_test:
